--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200;600&display=swap');
+
 .App {
   text-align: center;
+  font-family: 'Mulish', sans-serif;
 }
 
 .App-logo {
